# beam_engine

./: .gitignore  CLAUDE.md  cascade.md  package-lock.json  pyproject.toml  test.py  test_1.txt  test_2.txt  test_cascade.py  test_cascade_attention.py  test_output.txt
.claude/: settings.local.json
src/beam_engine/: __init__.py  attention_mode.py  beam.py  beam_state.py  beam_strategy.py  example_profile.py  kv_tree_node.py  logger.py  page_table.py  profile_beam_detailed.py  profile_decode.py  profile_huggingface_detailed.py  profile_with_hooks.py  profiling_utils.py  run.py  test_cascade.py
src/beam_engine/attention/: fasttree_adapter.py
src/beam_engine/attention/fasttree/: __init__.py  attn_kernels.py  kernel.py  metadata.py  preparation.py
src/beam_engine/models/: modeling_llama.py  transformers_llama.py
tests/: benchmark_attention.py  benchmark_beam.py  vllm_bench.py
