[project]
name = "beam_engine"
version = "0.1.0"
dependencies = [
    "torch==2.7.1",
    "flashinfer-python",
    "transformers==4.57.3",
    "ninja",
    "vllm>=0.10.1.1",
]

[tool.uv]
packages = ["beam_engine"]
no-build-isolation-package = ["torch"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
