[project]
name = "beam_engine"
version = "0.1.0"
dependencies = [
    "torch==2.9.0",
    "flashinfer-python",
    "transformers==4.57.3",
    "ninja",
    "vllm==0.13.0",
    "accelerate>=1.12.0",
]

[project.optional-dependencies]
benchmark = [
    "vllm",
]

[tool.uv]
no-build-isolation-package = ["torch"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"